--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,4 +31,4 @@ jobs:
             DEBUG=True
             COUNT=1
           include: |
-            ./migrator_publish
+            ./migrator_publish/*
