--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -37,5 +37,5 @@ jobs:
           memory: "256Mb"
           entrypoint: "Migrator.Handler"
           environment: |
-            ConnectionStrings__Postgres=example
+            ConnectionStrings__Postgres=${{ secrets.POSTGRES_CONNECTION_STRING }}
           source-root: "migrator_publish"
