--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,7 +24,7 @@ jobs:
         run: cd migrator_publish
 
       - name: PWD
-        run: echo ${{ secrets.POSTGRES_CONNECTION_STRING }}
+        run: echo 'dc'
 
       - name: Deploy Migrator Function
         id: sls-func
