--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,7 +24,7 @@ jobs:
         run: cd migrator_publish
 
       - name: PWD
-        run: echo 'sddddc'
+        run: echo 'sdddsdc'
 
       - name: Deploy Migrator Function
         id: sls-func
